--- a/src/client/screens/_dev/_example/example.jade
+++ b/src/client/screens/_dev/_example/example.jade
@@ -1,1 +1,5 @@
-section#Example
+section#Example.container-fluid
+    .row
+        .col-md-4
+            #SampleInput     
+            #SampleDropDown
