sourcemaps & theme styles

--- a/src/client/screens/_dev/_styleguide/styleguide.bootstrap.jade
+++ b/src/client/screens/_dev/_styleguide/styleguide.bootstrap.jade
@@ -489,7 +489,7 @@ section#StyleGuideBootstrap
             .progress
               .progress-bar.progress-bar-info(style='width: 20%')
             .progress.progress-striped.active
-              .progress-bar.progress-bar-success
+              .progress-bar.progress-bar-success(style='width: 40%')
             .progress
               .progress-bar.progress-bar-warning(style='width: 60%')
             .progress
