start kendo styling

--- a/src/client/screens/_dev/_styleguide/styleguide.bootstrap.jade
+++ b/src/client/screens/_dev/_styleguide/styleguide.bootstrap.jade
@@ -319,7 +319,7 @@ section#StyleGuideBootstrap
         //-         a(href='#') About
       
       // Navbar
-      #navbar.col-lg-6
+      #navbar.col-lg-12
         .panel.panel-default
           .panel-heading
             | Navbar
@@ -432,7 +432,7 @@ section#StyleGuideBootstrap
                 | Inbox 
                 span.badge 42
       
-      .col-lg-6
+      .col-lg-12
         
         // Alerts
         #alerts.panel.panel-default
@@ -771,18 +771,18 @@ section#StyleGuideBootstrap
     hr
     
     // Modal
-    a.btn.btn-primary.btn-lg(data-toggle='modal', href='#myModal') Launch demo modal
+    //- a.btn.btn-primary.btn-lg(data-toggle='modal', href='#myModal') Launch demo modal
 
-    #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
-            h4.modal-title Modal title
-          .modal-body
-            img(src='http://placekitten.com/400/400', alt='kitty')
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-            button.btn.btn-primary(type='button') Save changes
+    //- #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    //-   .modal-dialog
+    //-     .modal-content
+    //-       .modal-header
+    //-         button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
+    //-         h4.modal-title Modal title
+    //-       .modal-body
+    //-         img(src='http://placekitten.com/400/400', alt='kitty')
+    //-       .modal-footer
+    //-         button.btn.btn-default(type='button', data-dismiss='modal') Close
+    //-         button.btn.btn-primary(type='button') Save changes
 
 
