--- a/src/client/screens/_dev/_styleguide/styleguide.kendo.jade
+++ b/src/client/screens/_dev/_styleguide/styleguide.kendo.jade
@@ -1,3 +1,13 @@
 include styleguide.nav.jade
 
 section#StyleGuideKendo
+    .container
+        
+        h1 Kendo UI Style Guide
+
+        .row
+            .col-lg-12
+          
+              h3 Dropdown
+              #KendoDropDownList         
+              
