--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -1,7 +1,34 @@
 section#Home.container-fluid
+    nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+        .container
+            .navbar-header
+                button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex1-collapse')
+                  span.sr-only Toggle navigation       
+                  span.icon-bar           
+                  span.icon-bar           
+                  span.icon-bar
+             
+                a#contact-button.navbar-brand(data-bind='') Contact Me
+
+            .collapse.navbar-collapse.navbar-right.navbar-ex1-collapse
+                ul.nav.navbar-nav
+                    li
+                        a(href='/#/#Jumbotron') Home            
+                    li
+                        a(href='/#/#About') About
+                    li
+                        a(href='/#/#Portfolio') Projects            
+                    li
+                        a(href='http://blog.haihuynhlam.com' target="_blank") Blog
+
+            form#contact-form(role='form' style="display: none")
+                .form-group.contact-info
+                    span.glyphicon.glyphicon-pencil
+                        a(href='mailto:hhuynhlam@gmail.com') hhuynhlam@gmail.com
+
 
     //- Jumbotron
-    .intro-header
+    #Jumbotron.intro-header
         .container
             .row
               .col-lg-12
@@ -16,7 +43,7 @@ section#Home.container-fluid
                       a.btn.btn-default.btn-lg.network-name(href='http://github.com/hhuynhlam', target='_blank') View My GitHub
 
     //- About
-    .about
+    #About.about
         .container
             .row
               .col-sm-6.col-sm-push-6.col-xs-12
@@ -30,7 +57,7 @@ section#Home.container-fluid
                 img.img-responsive(src='public/images/about.jpg', alt='')
 
     //- Portfolio
-    .portfolio
+    #Portfolio.portfolio
         .container
             .row
               .col-lg-12.text-center
@@ -58,7 +85,7 @@ section#Home.container-fluid
                   | .
 
     //- Banner
-    .banner
+    #Banner.banner
         .container
             .row
               .col-lg-6
