--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -38,7 +38,7 @@ section#Home.container-fluid
                   h3.hidden-xs Software Engineer                  
                   ul.list-inline.intro-social-buttons
                     li
-                      a.btn.btn-default.btn-lg.network-name(href='#portfolio') View My Portfolio                        
+                      a.btn.btn-default.btn-lg.network-name(href='/#/#Portfolio') View My Portfolio                        
                     li
                       a.btn.btn-default.btn-lg.network-name(href='http://github.com/hhuynhlam', target='_blank') View My GitHub
 
