--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -1,30 +1,30 @@
 section#Home.container-fluid
-    //- nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
-    //-     .container
-    //-         .navbar-header
-    //-             button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex1-collapse')
-    //-               span.sr-only Toggle navigation       
-    //-               span.icon-bar           
-    //-               span.icon-bar           
-    //-               span.icon-bar
+    nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+        .container
+            .navbar-header
+                button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex1-collapse')
+                  span.sr-only Toggle navigation       
+                  span.icon-bar           
+                  span.icon-bar           
+                  span.icon-bar
              
-    //-             a#contact-button.navbar-brand(data-bind='click: toggleContact;') Contact Me
+                a#contact-button.navbar-brand(data-bind='click: toggleContact;') Contact Me
 
-    //-         .collapse.navbar-collapse.navbar-right.navbar-ex1-collapse
-    //-             ul.nav.navbar-nav
-    //-                 li
-    //-                     a(href='/#/#Jumbotron') Home            
-    //-                 li
-    //-                     a(href='/#/#About') About
-    //-                 li
-    //-                     a(href='/#/#Portfolio') Projects            
-    //-                 li
-    //-                     a(href='http://blog.haihuynhlam.com' target="_blank") Blog
+            .collapse.navbar-collapse.navbar-right.navbar-ex1-collapse
+                ul.nav.navbar-nav
+                    li
+                        a(href='/#/#Jumbotron') Home            
+                    li
+                        a(href='/#/#About') About
+                    li
+                        a(href='/#/#Portfolio') Projects            
+                    li
+                        a(href='http://blog.haihuynhlam.com' target="_blank") Blog
 
-    //-         form#contact-form(role='form' style="display: none" data-bind="slideVisible: showContact;")
-    //-             .form-group.contact-info
-    //-                 span.glyphicon.glyphicon-pencil
-    //-                     a(href='mailto:hhuynhlam@gmail.com') &nbsp; hhuynhlam@gmail.com
+            form#contact-form(role='form' style="display: none" data-bind="slideVisible: showContact;")
+                .form-group.contact-info
+                    span.glyphicon.glyphicon-pencil
+                        a(href='mailto:hhuynhlam@gmail.com') &nbsp; hhuynhlam@gmail.com
 
 
     //- Jumbotron
