update about me

--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -51,8 +51,8 @@ section#Home.container-fluid
                 .clearfix          
                 h2.section-heading About Me             
                 p.lead
-                  | I am from San Francisco, CA and I spend my days engineering large corporate softwares. I studied at the University of California, Irvine where I majored in Computer Science and Engineering. I specialize in client-side web applications development, primarily with a JavaScript stack. Although JavaScript is my weapon of choice, I have an incredible zest for software engineering technologies and have a proven track record for being able to learn quickly. My primary focus is to build modular, scalable and maintainable code that promotes a positive user experience.
-             
+                  | A forward thinking Web Engineer with 5+ years of front­end experience driving delivery of high­quality, modular, maintainable and scalable user­centered systems. A multi­disciplined developer who can create pixel perfect web pages from wireframes, build server­side API systems from scratch and engineer continuous integration flows that ensure code quality and development efficiency. A consummate teammate who thrives on learning, teaching and performing with rockstar talent.
+
               .col-sm-6.col-sm-pull-6.col-xs-12.img-container
                 img.img-responsive(src='public/images/about.jpg', alt='')
 
