--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -19,7 +19,7 @@ section#Home.container-fluid
                     li
                         a(href='/#/#Portfolio') Projects            
                     li
-                        a(href='http://blog.haihuynhlam.com' target="_blank") Blog
+                        a(href='http://techtidbits.herokuapp.com' target="_blank") Blog
 
             form#contact-form(role='form' style="display: none" data-bind="slideVisible: showContact;")
                 .form-group.contact-info
@@ -51,7 +51,7 @@ section#Home.container-fluid
                 .clearfix          
                 h2.section-heading About Me             
                 p.lead
-                  | A forward thinking Web Engineer with 5+ years of front­end experience driving delivery of high­quality, modular, maintainable and scalable user­centered systems. A multi­disciplined developer who can create pixel perfect web pages from wireframes, build server­side API systems from scratch and engineer continuous integration flows that ensure code quality and development efficiency. A consummate teammate who thrives on learning, teaching and performing with rockstar talent.
+                  | A forward thinking Web Engineer with 5+ years of front­-end experience driving delivery of high­-quality, modular, maintainable and scalable user­-centered systems. A multi­-disciplined developer who can create pixel perfect web pages from wireframes, build server­-side API systems from scratch and engineer continuous integration flows that ensure code quality and development efficiency. A consummate teammate who thrives on learning, teaching and performing with rockstar talent.
 
               .col-sm-6.col-sm-pull-6.col-xs-12.img-container
                 img.img-responsive(src='public/images/about.jpg', alt='')
@@ -68,7 +68,7 @@ section#Home.container-fluid
                 // begin projects
                 .row
                   div(style='display: inline-block;')
-                    a(href='http://chefcipes.com/aphio/client/#/', target='_blank')
+                    a(href='http://clubs.uci.edu/aphio/beta/client/#/', target='_blank')
                       img(src='/public/images/projects/apo_thumb.png')
                   |                     
                   div(style='display: inline-block;')
