--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -17,7 +17,9 @@ section#Home.container-fluid
                     li
                         a(href='/#/#About') About
                     li
-                        a(href='/#/#Portfolio') Projects            
+                        a(href='/#/#Portfolio') Projects 
+                    li
+                        a(href='https://drive.google.com/open?id=0B22DJ_I0FYO8QmJFZHQ2LTAydTA') Resume            
                     li
                         a(href='http://techtidbits.herokuapp.com' target="_blank") Blog
 
