--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -19,7 +19,7 @@ section#Home.container-fluid
                     li
                         a(href='/#/#Portfolio') Projects 
                     li
-                        a(href='https://drive.google.com/open?id=0B22DJ_I0FYO8QmJFZHQ2LTAydTA') Resume            
+                        a(href='https://drive.google.com/open?id=0B22DJ_I0FYO8QmJFZHQ2LTAydTA' target="_blank") Resume            
                     li
                         a(href='http://techtidbits.herokuapp.com' target="_blank") Blog
 
