--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -42,7 +42,7 @@ section#Home.container-fluid
                     li
                       a.btn.btn-default.btn-lg.network-name(href='/#/#Portfolio') View My Portfolio                        
                     li
-                      a.btn.btn-default.btn-lg.network-name(href='http://github.com/hhuynhlam', target='_blank') View My GitHub
+                      a.btn.btn-default.btn-lg.network-name(href='https://drive.google.com/open?id=0B22DJ_I0FYO8QmJFZHQ2LTAydTA', target='_blank') View My Resume
 
     //- About
     #About.about
