--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -21,7 +21,7 @@ section#Home.container-fluid
                     li
                         a(href='https://drive.google.com/open?id=0B22DJ_I0FYO8QmJFZHQ2LTAydTA' target="_blank") Resume            
                     li
-                        a(href='http://techtidbits.herokuapp.com' target="_blank") Blog
+                        a(href='https://haihuynhlam.wordpress.com' target="_blank") Blog
 
             form#contact-form(role='form' style="display: none" data-bind="slideVisible: showContact;")
                 .form-group.contact-info
