add more projects

--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -76,6 +76,12 @@ section#Home.container-fluid
                   div(style='display: inline-block;')
                     a(href='https://eros-dev.herokuapp.com/#/', target='_blank')
                       img(src='/public/images/projects/eros_thumb.png')
+                  div(style='display: inline-block;')
+                    a(href='http://peakpowerus.com/', target='_blank')
+                      img(src='/public/images/projects/peak_thumb.png')
+                  div(style='display: inline-block;')
+                    a(href='http://roomzdesign.com/', target='_blank')
+                      img(src='/public/images/projects/roomz_thumb.png')
                 // end projects
 
                 br
