--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -76,6 +76,8 @@ section#Home.container-fluid
                   div(style='display: inline-block;')
                     a(href='https://eros-dev.herokuapp.com/#/', target='_blank')
                       img(src='/public/images/projects/eros_thumb.png')
+
+                .row
                   div(style='display: inline-block;')
                     a(href='http://peakpowerus.com/', target='_blank')
                       img(src='/public/images/projects/peak_thumb.png')
