--- a/src/client/screens/home/home.jade
+++ b/src/client/screens/home/home.jade
@@ -65,25 +65,25 @@ section#Home.container-fluid
               .col-lg-12.text-center
                 hr.section-heading-spacer               
                 .clearfix            
-                h2.section-heading Featured Projects
+                h2.section-heading(style="margin-bottom: 0;") Featured Projects
 
                 // begin projects
                 .row
-                  div(style='display: inline-block;')
+                  div.col-md-4.col-sm-6.margin-top-lg
                     a(href='http://clubs.uci.edu/aphio/beta/client/#/', target='_blank')
-                      img(src='/public/images/projects/apo_thumb.png')
+                      img.img-responsive.center-block(src='/public/images/projects/apo_thumb.png')
                   |                     
-                  div(style='display: inline-block;')
+                  div.col-md-4.col-sm-6.margin-top-lg
                     a(href='https://eros-dev.herokuapp.com/#/', target='_blank')
-                      img(src='/public/images/projects/eros_thumb.png')
+                      img.img-responsive.center-block(src='/public/images/projects/eros_thumb.png')
 
-                .row
-                  div(style='display: inline-block;')
+                  div.col-md-4.col-sm-6.margin-top-lg
                     a(href='http://peakpowerus.com/', target='_blank')
-                      img(src='/public/images/projects/peak_thumb.png')
-                  div(style='display: inline-block;')
+                      img.img-responsive.center-block(src='/public/images/projects/peak_thumb.png')
+
+                  div.col-md-4.col-sm-6.margin-top-lg
                     a(href='http://roomzdesign.com/', target='_blank')
-                      img(src='/public/images/projects/roomz_thumb.png')
+                      img.img-responsive.center-block(src='/public/images/projects/roomz_thumb.png')
                 // end projects
 
                 br
