--- a/src/client/styles/themes/portfolio/app.less
+++ b/src/client/styles/themes/portfolio/app.less
@@ -120,6 +120,11 @@ a:hover {
     font-size: 5em;
 }
 
+/* Utilities */
+.margin-top-lg {
+    margin-top: 30px;
+}
+
 /* Responsive */
 @media (min-width: 768px) and (max-width: 991px) {
     .lead { font-size: 15px !important; }
